refresh and fixe of some layout problems. I separated the index in 2 parts. The closed version and the opened one

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #192a56;
+    background-color: lightblue;
 }
 
 header {
@@ -253,7 +253,7 @@ footer {
     left: 20px;
     height: 30px;
     width: 30px;
-    background: burlywood;
+    background: lightblue;
     border-radius: 50%;
     box-shadow: inset 0px 0px 2px 0px #888;
 }
